--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -34,7 +34,7 @@
       </tbody>
     </table><br/>
 
-    <form action="{{ url_for('results') }}" enctype="multipart/form-data" method="post" id="form">
+    <form action="{{ url_for('upload') }}" enctype="multipart/form-data" method="post" id="form">
       <label for="PathToInputAln">Upload input alignment:</label>
       <input type="file" name="PathToInputAln" accept=".fasta,.fa"><br>
       <label>Codon Partitioning:</label>
