--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -3,7 +3,7 @@
 
 <main>
   
-  <p>Fasta alignments and Nucleotide alignments only.</p>
+  <h3><strong>Please Note: </strong>Currently only accepts nucleotide alignments in Fasta format.</h3><br/>
   
   <div id="floatleft">
     
@@ -32,20 +32,23 @@
 	  <td>asdfgh</td>
 	</tr>
       </tbody>
-    </table><br/>
+    </table><br/><br/>
 
     <form action="{{ url_for('upload') }}" enctype="multipart/form-data" method="post" id="form">
       <label for="PathToInputAln">Upload input alignment:</label>
       <input type="file" name="PathToInputAln" accept=".fasta,.fa"><br>
       <label>Codon Partitioning:</label>
       <select name="Partition">
-	<option value="True">On</option>
 	<option value="False">Off</option>
+	<option value="True">On</option>
       </select><br>
       <label>Significance Value*:</label>
-      <input type="number" name="Alpha" value="0.05"><br>
+      <select name="Alpha">
+	<option value="0">Determine from data</option>
+	<option value="0.05">0.05</option>
+      </select><br>
       <input type="submit" class="button">
-    </form><br>
+    </form><br/>
 
     <p>*If given a custom/arbitrary value (e.g. 0.05), SRHClusterMapper <em>will not</em> perform Sequential Bonferroni correction. By default behaviour, Sequential Bonferroni correction will be performed to seek a significance value lower than 0.05. i.e. Leaving this option to default will result in more sequences passing the symmetry tests.</p>
 
