--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -50,6 +50,8 @@
 	<option value="0">Determine from data</option>
 	<option value="0.05">0.05</option>
       </select><br>
+      <label>Purity Benchmark as float (e.g. 0.95):</label>
+      <input type="number" name="Benchmark" min="0.0" max="1.0" step = "0.01"><br>
       <input type="submit" class="button">
     </form><br/>
 
